tmux) update key bindings -> switch panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,18 @@
 # tmux.conf
 
+# Settings
+# --------
+# Enable mouse control
+set -g mouse on
+
 # Key Bindings
 # --------------
 # Key combination prefix is <C-a>
 set-option -g prefix C-a
 unbind-key C-b
+
+# Reload config
+bind r source-file ~/.tmux.conf
 
 # split panes
 unbind '"'
@@ -13,10 +21,12 @@ bind | split-window -h
 bind - split-window -v
 
 # switch panes
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+unbind Up
+unbind Down
+unbind Left
+unbind Right
 
-# Enable mouse control
-set -g mouse on
